@@ -1,5 +1,5 @@
 /*
-   Copyright 2021 Nationale-Nederlanden, 2022-2025 WeAreFrank!
+   Copyright 2021 Nationale-Nederlanden, 2022-2026 WeAreFrank!
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -20,9 +20,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.NoSuchElementException;
 
-import jakarta.annotation.Nonnull;
-
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.Nullable;
 
 public class FileSystemSecret extends Secret {
 
@@ -42,14 +41,15 @@ public class FileSystemSecret extends Secret {
 	}
 
 	@Override
-	public String getField(@Nonnull String fieldname) throws IOException {
+	@Nullable
+	public String getField(@Nullable String fieldname) throws IOException {
 		if (StringUtils.isNotBlank(fieldname) && Files.isRegularFile(aliasPath)) {
 			throw new NoSuchElementException("cannot obtain field from secret [" + this + "]");
 		}
 
 		Path field = StringUtils.isBlank(fieldname) ? aliasPath : aliasPath.resolve(fieldname);
 		if (Files.exists(field)) {
-			return Files.readAllLines(field).get(0);
+			return Files.readAllLines(field).getFirst();
 		}
 
 		return null;
