@@ -1,5 +1,5 @@
 /*
-   Copyright 2015, 2017, 2020 Nationale-Nederlanden, 2025 WeAreFrank!
+   Copyright 2015, 2017, 2020 Nationale-Nederlanden, 2021-2026 WeAreFrank!
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -18,7 +18,7 @@ package org.frankframework.extensions.svn;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Vector;
@@ -26,9 +26,8 @@ import java.util.Vector;
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
 
-import jakarta.annotation.Nonnull;
-
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
 
 import org.frankframework.configuration.ConfigurationException;
 import org.frankframework.core.PipeLineSession;
@@ -56,7 +55,7 @@ public class ScanTibcoSolutionPipe extends FixedForwardPipe {
 	private String url;
 	private int level = 0;
 
-	@Nonnull
+	@NonNull
 	@Override
 	public PipeRunResult doPipe(Message message, PipeLineSession session) throws PipeRunException {
 		StringWriter stringWriter = new StringWriter();
@@ -262,8 +261,8 @@ public class ScanTibcoSolutionPipe extends FixedForwardPipe {
 						for (String itn : c2) {
 							String wsdl;
 							try {
-								URL url = new URL(urlString);
-								URL wsdlUrl = new URL(url, itn);
+								URI uri = new URI(urlString);
+								URI wsdlUrl = uri.resolve(itn);
 								wsdl = getHtml(wsdlUrl.toString());
 							} catch (Exception e) {
 								error(
